--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "best": "^4.0.0-beta5"
+    "best": "^4.0.0-beta5",
     "random": "^2.1.1",
     "rt": "0.0.1",
     "axios": "^0.19.2"
